@@ -3,6 +3,8 @@
 
 \section c018 version 0.17 -> 0.17+
 
+ - Restart serial port connection if lost. (29-feb-2008, Brian
+   Wheeler)
  - Fix RMC reported psu and temperature status. (29-feb-2008, Brian
    Wheeler)
  - Compute SROM checksum for network interface. Tru64 needs this.
